fix: corrige breakpoints e overflow no mobile.

--- a/docs/src/scss/_layout.scss
+++ b/docs/src/scss/_layout.scss
@@ -745,6 +745,10 @@
                    border-radius: 8px;
                    transition: 0.3s;
                    
+                   @media (--xs) {
+                    overflow: hidden;
+                   }
+                   
                    .wrapper {
                        margin-left: 30px;
                        font-style: italic;
